feat: upgrade @weapp-core/escape

--- a/apps/web-postcss7-compat/transformed.css
+++ b/apps/web-postcss7-compat/transformed.css
@@ -113,12 +113,12 @@ view,text,::before,::after {
   .m-3 {
     margin: 24rpx
 }
-  .h-_121px_ {
+  .h-_b121px_B {
     height: 121px
 }
-  .w-_99px_ {
+  .w-_b99px_B {
     width: 99px
 }
-  .ip-_1d1px_ {
+  ._ep-_b1_d1px_B {
     padding: 1.1px !important
 }
