--- a/packages/weapp-tailwindcss/test/fixtures/css/v4-default-output.css
+++ b/packages/weapp-tailwindcss/test/fixtures/css/v4-default-output.css
@@ -741,17 +741,17 @@ button,input,::file-selector-button {
       max-width: 96rem;
   }
     }
-.m-_3d45rpx_ {
+.m-_b3_d45rpx_B {
     margin: 3.45rpx;
   }
 .mx-auto {
     margin-left: auto;
     margin-right: auto;
   }
-.bg-_h377a6c90_ {
+.bg-_b_h377a6c90_B {
     background-color: rgba(55,122,108,0.56471);
   }
-.p-_12d34px_ {
+.p-_b12_d34px_B {
     padding: 12.34px;
   }
 @keyframes spin {
