--- a/packages/postcss/test/fixtures/css/v4.1.2.out.css
+++ b/packages/postcss/test/fixtures/css/v4.1.2.out.css
@@ -49,16 +49,16 @@ view,text,:after,:before,::backdrop {
   --tw-invert: invert(100%);
   filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
 }
-.beforeccontent-_wqawq_::before {
+.before_ccontent-_b_r_a_u_r_a_B::before {
     content: var(--tw-content);
     --tw-content: \'+\';
   }
-.beforeccontent-_wqhellowq_::before {
+.before_ccontent-_b_r_ahello_r_a_B::before {
     content: var(--tw-content);
     --tw-content: \'hello\';
   }
 @media (prefers-color-scheme: dark) {
-.darkcbg-zinc-800 {
+.dark_cbg-zinc-800 {
     background-color: var(--color-zinc-800);
 }
   }
